fix overflow-x on tooltips

--- a/ui/screens/tooltip/modules/tooltip_module.css
+++ b/ui/screens/tooltip/modules/tooltip_module.css
@@ -19,7 +19,8 @@
 	padding-bottom: 1.0rem;
 	position : absolute;
 
-	overflow: visible;
+	overflow-y: visible;
+	overflow-x: hidden;
 	/*pointer-events: none;*/
 
 	background-image: url("coui://gfx/ui/skin/mod_tooltip_255_bottom.png");
